# ffi-bbs-signatures

./: Makefile  cbindgen.c.toml  cbindgen.cpp.toml
.github/workflows/: build-android.yml  build-ios.yml  ci-python.yml
scripts/: build.sh  generate-c-header.sh  generate-cpp-header.sh
src/: bbs_blind_sign.rs
tests/: CMakeCache.txt  CMakeLists.txt  Makefile  bbs_test  cmake_install.cmake
tests-cpp/: CMakeCache.txt  CMakeLists.txt  Makefile  bbs_test  bbs_test.cpp  cmake_install.cmake
wrappers/dotnet/src/BbsSignatures/: NativeMethods.cs
wrappers/python/: test.py
wrappers/python/src/: api.py
wrappers/python/src/fast_forward_interface/: ExternError.py  ffi_util.py
wrappers/python/src/fast_forward_interface/bindings/: bbs_blind_commitment.py  bbs_blind_sign.py  bbs_create_proof.py  bbs_sign.py  bbs_verify.py  bbs_verify_blind_commitment.py  bbs_verify_proof.py  bls.py
wrappers/python/src/models/: ProofMessage.py
wrappers/python/src/models/keys/: BlindedBlsKeyPair.py  BlsKeyPair.py
wrappers/python/ursa_bbs_signatures/: version.py
wrappers/python/ursa_bbs_signatures/foreign_function_interface/: ffi_util.py
